unpackaged/main/default/objects/ApplicantIdentity__c/ApplicantIdentity__c.object-meta.xml
<CustomObject>
    <label>Applicant Identity</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Applicant Identity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Identities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>