unpackaged/main/default/objects/ApplicantIdentity__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Applicant Identities</relationshipLabel>
    <relationshipName>Applicant_Identities</relationshipName>
    <type>Lookup</type>
</CustomField>