unpackaged/main/default/objects/ApplicantIdentity__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Driver License</fullName>
            </value>
            <value>
                <fullName>Photo Id Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>