unpackaged/main/default/objects/ApplicantIdentity__c/fields/IdentityFail__c.field-meta.xml
<CustomField>
    <fullName>IdentityFail__c</fullName>
    <label>Identity Fail</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>